crates/cribo/tests/snapshots/bundled_code@conditional_exports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_exports/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('compat_module', '_cribo_init___cribo_244765_compat_module', 'compat_module', False)
_cribo_finder.register('exceptions_module', None, None, False, {'BaseError': 'BaseError'})
compat_module = _cribo.types.SimpleNamespace(__name__='compat_module', __initializing__=False, __initialized__=False)
_cribo_finder.bind('compat_module', compat_module)
def _cribo_init___cribo_244765_compat_module(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    self.__doc__ = '\nModule that mimics requests.compat structure.\nNo __all__ defined, so all non-underscore symbols should be exported.\n'
    """\nModule that mimics requests.compat structure.\nNo __all__ defined, so all non-underscore symbols should be exported.\n"""
    sys = _cribo.sys
    self.sys = sys
    self.sys = sys
    _ver = _cribo.sys.version_info
    self._ver = _ver
    is_py2 = _ver[0] == 2
    self.is_py2 = is_py2
    is_py3 = _ver[0] == 3
    self.is_py3 = is_py3
    has_simplejson = False
    self.has_simplejson = has_simplejson
    try:
        import simplejson as json
        compat_module.json = json
        has_simplejson = True
        compat_module.has_simplejson = has_simplejson
    except ImportError:
        json = _cribo.json
        self.json = json
    if has_simplejson:
        from simplejson import JSONDecodeError
        compat_module.JSONDecodeError = JSONDecodeError
    else:
        JSONDecodeError = _cribo.json.JSONDecodeError
        compat_module.JSONDecodeError = JSONDecodeError

    def _resolve_char_detection():
        """Find supported character detection libraries."""
        chardet = None
        for lib in ("chardet", "charset_normalizer"):
            if chardet is None:
                try:
                    chardet = __import__(lib)
                except ImportError:
                    pass
        return chardet
    _resolve_char_detection.__module__ = 'compat_module'
    _resolve_char_detection.__qualname__ = '_resolve_char_detection'
    self._resolve_char_detection = _resolve_char_detection
    chardet = _resolve_char_detection()
    self.chardet = chardet
    builtin_str = str
    self.builtin_str = builtin_str
    basestring = str, bytes
    self.basestring = basestring
    _internal_cache = {}
    self._internal_cache = _internal_cache

    def get_encoding_from_headers(headers):
        """Dummy function to test function exports."""
        return "utf-8"
    get_encoding_from_headers.__module__ = 'compat_module'
    get_encoding_from_headers.__qualname__ = 'get_encoding_from_headers'
    self.get_encoding_from_headers = get_encoding_from_headers
    self.__initialized__ = True
    self.__initializing__ = False
    return self
compat_module.__init__ = _cribo_init___cribo_244765_compat_module
exceptions_module = _cribo.types.SimpleNamespace(__name__='exceptions_module', __doc__='Module that uses imports from compat_module (like requests.exceptions).')
"""Module that uses imports from compat_module (like requests.exceptions)."""
class BaseError(Exception):
    """Base error class."""
    pass
BaseError.__module__ = 'exceptions_module'
exceptions_module.BaseError = BaseError
"""Test conditional imports and exports without explicit __all__."""
compat_module = _cribo_init___cribo_244765_compat_module(compat_module)
print("compat_module has JSONDecodeError:", hasattr(compat_module, "JSONDecodeError"))
if hasattr(compat_module, "JSONDecodeError"):
    print("✓ Can access compat_module.JSONDecodeError")
else:
    print("✗ Cannot access compat_module.JSONDecodeError")
try:

    class CustomJSONError(exceptions_module.BaseError, compat_module.JSONDecodeError):
        """Custom JSON error that inherits from both base error and JSONDecodeError."""
        pass
    print("✓ Successfully created class inheriting from compat_module.JSONDecodeError")
except AttributeError as e:
    print(f"✗ Failed to create class: {e}")
expected_exports = ["json", "JSONDecodeError", "builtin_str", "is_py3", "chardet"]
for export in expected_exports:
    if hasattr(compat_module, export):
        print(f"✓ {export} is accessible")
    else:
        print(f"✗ {export} is NOT accessible")
