crates/cribo/tests/snapshots/bundled_code@conditional_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_imports/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('try_except_module', '_cribo_init___cribo_17f1ec_try_except_module', 'try_except_module', False)
_cribo_finder.register('conditional_module', '_cribo_init___cribo_e43fad_conditional_module', 'conditional_module', False)
conditional_module = _cribo.types.SimpleNamespace(__name__='conditional_module', __initializing__=False, __initialized__=False)
_cribo_finder.bind('conditional_module', conditional_module)
def _cribo_init___cribo_e43fad_conditional_module(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    """Module with conditional imports inside if/else blocks."""
    has_simplejson = False
    self.has_simplejson = has_simplejson
    try:
        import simplejson as json
        conditional_module.json = json
        has_simplejson = True
        conditional_module.has_simplejson = has_simplejson
    except ImportError:
        json = _cribo.json
        self.json = json
    if has_simplejson:
        from simplejson import JSONDecodeError
        conditional_module.JSONDecodeError = JSONDecodeError
    else:
        JSONDecodeError = _cribo.json.JSONDecodeError
        conditional_module.JSONDecodeError = JSONDecodeError
    sys = _cribo.sys
    self.sys = sys
    self.sys = sys
    if _cribo.sys.version_info[0] >= 3:
        builtin_str = str
        conditional_module.builtin_str = builtin_str
        my_str = str
        conditional_module.my_str = my_str
    else:
        builtin_str = str
        conditional_module.builtin_str = builtin_str
        my_str = unicode
        conditional_module.my_str = my_str
    basestring = str, bytes
    self.basestring = basestring
    if has_simplejson:
        if hasattr(json, "JSONDecodeError"):
            pass
        else:
            JSONDecodeError = ValueError
            conditional_module.JSONDecodeError = JSONDecodeError
    else:
        pass

    def decode_json(text):
        """Decode JSON using the conditionally imported decoder."""
        try:
            return json.loads(text)
        except JSONDecodeError as e:
            return None
    self.decode_json = decode_json
    self.__initialized__ = True
    self.__initializing__ = False
    return self
conditional_module.__init__ = _cribo_init___cribo_e43fad_conditional_module
try_except_module = _cribo.types.SimpleNamespace(__name__='try_except_module', __initializing__=False, __initialized__=False)
_cribo_finder.bind('try_except_module', try_except_module)
def _cribo_init___cribo_17f1ec_try_except_module(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    """Module with imports inside try/except blocks."""
    etree = None
    self.etree = etree
    ETREE_VERSION = None
    self.ETREE_VERSION = ETREE_VERSION
    try:
        from lxml import etree
        try_except_module.etree = etree
        ETREE_VERSION = "lxml"
        try_except_module.ETREE_VERSION = ETREE_VERSION
    except ImportError:
        try:
            etree = _cribo.xml.etree.ElementTree
            self.etree = etree
            ETREE_VERSION = "stdlib"
            try_except_module.ETREE_VERSION = ETREE_VERSION
        except ImportError:
            etree = None
            try_except_module.etree = etree
            ETREE_VERSION = None
            try_except_module.ETREE_VERSION = ETREE_VERSION
    parser_backend = None
    self.parser_backend = parser_backend
    try:
        import cElementTree as ET
        try_except_module.ET = ET
        parser_backend = "cElementTree"
        try_except_module.parser_backend = parser_backend
    except ImportError:
        try:
            ET = _cribo.xml.etree.ElementTree
            self.ET = ET
            parser_backend = "ElementTree"
            try_except_module.parser_backend = parser_backend
        except ImportError:
            ET = None
            try_except_module.ET = ET
            parser_backend = None
            try_except_module.parser_backend = parser_backend

    def parse_xml(xml_string):
        """Parse XML using available parser."""
        if etree is not None:
            return etree.fromstring(xml_string)
        elif ET is not None:
            return ET.fromstring(xml_string)
        else:
            raise ImportError("No XML parser available")
    self.parse_xml = parse_xml
    self.__initialized__ = True
    self.__initializing__ = False
    return self
try_except_module.__init__ = _cribo_init___cribo_17f1ec_try_except_module
"""Test conditional imports in if/else and try/except blocks."""
conditional_module = _cribo_init___cribo_e43fad_conditional_module(conditional_module)
try_except_module = _cribo_init___cribo_17f1ec_try_except_module(try_except_module)
print("If/else import - JSONDecodeError:", hasattr(conditional_module, "JSONDecodeError"))
print("If/else import - json:", hasattr(conditional_module, "json"))
print("If/else import - builtin_str:", hasattr(conditional_module, "builtin_str"))
try:
    raise conditional_module.JSONDecodeError("test", "doc", 0)
except conditional_module.JSONDecodeError as e:
    print("Successfully caught JSONDecodeError from conditional import")
print("Try/except import - etree:", hasattr(try_except_module, "etree"))
print("Try/except import - ETREE_VERSION:", hasattr(try_except_module, "ETREE_VERSION"))
if try_except_module.etree is not None:
    print("Successfully imported etree module")
else:
    print("etree module is None (not available)")
expected_attrs = ["JSONDecodeError", "json", "builtin_str", "basestring", "has_simplejson"]
for attr in expected_attrs:
    if hasattr(conditional_module, attr):
        print(f"✓ {attr} is accessible")
    else:
        print(f"✗ {attr} is NOT accessible")
