crates/cribo/tests/snapshots/bundled_code@conditional_match_guard_binding.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_match_guard_binding/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
guarded = _cribo.types.SimpleNamespace(__name__='guarded', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_ca0dcb_guarded(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True

    def get_subject():
        return "captured"
    self.get_subject = get_subject
    match get_subject():
        case GUARDED_VALUE if (_cribo.builtins.setattr(guarded, 'GUARDED_VALUE', GUARDED_VALUE) or GUARDED_VALUE == "not-captured"):
            raise AssertionError
    self.__initialized__ = True
    self.__initializing__ = False
    return self
guarded.__init__ = _cribo_init___cribo_ca0dcb_guarded
guarded = _cribo_init___cribo_ca0dcb_guarded(guarded)
print(guarded.GUARDED_VALUE)
